--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,8 +14,14 @@ jobs:
         with:
           node-version: 12
       - run: npm install
+        env:
+          folder: sample-packages/npm
       - run: npm ci
+        env:
+          folder: sample-packages/npm
       - run: npm test
+        env:
+          folder: sample-packages/npm
 
   publish-gpr:
     needs: build
