--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -6,19 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npm install --prefix ./sample-packages/npm/ --folder ./sample-packages/npm/
-      - run: npm ci --prefix ./sample-packages/npm/ --folder ./sample-packages/npm/
-      - run: npm test --prefix ./sample-packages/npm/ --folder ./sample-packages/npm/
-
   publish-gpr:
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,7 +14,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+      - run: npm ci --prefix ./sample-packages/npm/ --folder ./sample-packages/npm/
+      - run: npm publish --prefix ./sample-packages/npm/ --folder ./sample-packages/npm/
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
